# Matrix_multiplicationMPI

./: CMakeLists.txt  build.sh  main.c  mpe-build.sh  run.sh
